markup/css/style.css
/* #region Fonts */

@font-face {
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url("../fonts/open-sans-v44-latin-latinext-400.woff2") format("woff2");
}

@font-face {
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url("../fonts/open-sans-v44-latin-latinext-500.woff2") format("woff2");
}

@font-face {
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url("../fonts/open-sans-v44-latin-latinext-600.woff2") format("woff2");
}

@font-face {
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url("../fonts/open-sans-v44-latin-latinext-700.woff2") format("woff2");
}

@font-face {
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 800;
  font-display: swap;
  src: url("../fonts/open-sans-v44-latin-latinext-800.woff2") format("woff2");
}

/* #endregion */

/* #region Global */

:root {
  --text-primary-color: #ffffff;
  --text-primary-color-70: rgba(255, 255, 255, 0.7);
  --text-secondary-color: #687fad;
  --text-additional-color: #212126;
  --background-primary-color: #121213;
  --background-secondary-color: #212126;
  --background-additional-color: #f6f6f6;
  --background-special-color-1: rgba(0, 46, 255, 0.4);
  --background-special-color-2: rgba(255, 255, 255, 0.1);
  --outline-color: #31353f;
  --outline-color-strong: #979797;
  --muted-color: #7c7c7c;
  --muted-color-70: rgba(124, 124, 124, 0.7);
  --accent-color: #ffe800;
  --accent-color-70: rgba(255, 232, 0, 0.7);
  --special-color-1: #7bc549;
  --special-color-2: #8da5aa;

  --checkmark-icon: url("data:image/svg+xml,%3Csvg viewBox='0 0 14 10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12.96 0 .8.6-7.23 9.46L0 3.43l.71-.7 5.72 5.81z'/%3E%3C/svg%3E%0A");
  --list-add-icon: url("data:image/svg+xml,%3Csvg viewBox='0 0 17 15' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3 3V0h1v3h3v1H4v3H3V4H0V3h3zm4 3h10v1H7V6zm-4 4h14v1H3zm0 4h14v1H3z'/%3E%3C/svg%3E%0A");
  --star-icon: url("data:image/svg+xml,%3Csvg viewBox='0 0 18 18' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m9 13.44 4.04 2.12-.77-4.5 3.26-3.18-4.51-.66L9 3.13 6.98 7.22l-4.51.66 3.26 3.18-.77 4.5L9 13.43zm-5.37 3.95 1.03-5.98L.32 7.18l6-.87L9 .87l2.68 5.44 6 .87-4.34 4.23 1.03 5.98L9 14.56 3.63 17.4z'/%3E%3C/svg%3E%0A");
}

/* #endregion */

/* #region Helpers */

.container {
  max-width: 1200px;
  margin-right: auto;
  margin-left: auto;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* #endregion */

/* #region animated-ellipsis */

.animated-ellipsis {
  display: inline-grid;
  justify-items: start;
}

.animated-ellipsis span {
  grid-area: 1 / 1 / 2 / 2;
  color: transparent;
}

.animated-ellipsis::after {
  content: "";
  grid-area: 1 / 1 / 2 / 2;
  animation: ellipsis 1000ms linear infinite;
}

/* #endregion */

/* #region button */

.button {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  font-weight: 400;
  transition: opacity 200ms linear;
}

.button:enabled {
  cursor: pointer;
}

.button:enabled:hover {
  opacity: 0.7;
}

.button--secondary {
  border: 1px solid var(--outline-color);
  color: inherit;
  background: none;
}

/* sizes */

.button--size_m {
  font-size: 14px;
  line-height: 20px;
}

.button--size_m.button--secondary {
  padding: 19px;
}

/* #endregion */

/* #region catalog */

.catalog__filter-wrapper {
  padding: 0 0 25px;
  border-bottom: 2px solid var(--outline-color);
}

.catalog__sort {
  margin: 13px 0 0;
}

.catalog__list {
  margin: 60px 0 0;
}

.catalog__show-more-button {
  margin: 36px 0 0;
  width: 100%;
}

.catalog__message {
  margin: 20px 0;
}

/* #endregion */

/* #region catalog-filter */

.catalog-filter {
  display: flex;
  flex-wrap: wrap;
  gap: 20px 40px;
  align-items: center;
}

.catalog-filter__button:first-child {
  margin-right: auto;
}

/* #endregion */

/* #region catalog-sort */

.catalog-sort {
  display: flex;
  flex-wrap: wrap;
  gap: 16px 32px;
  align-items: center;
}

/* #endregion */

/* #region checker */

.checker {
  display: inline-block;
}

.checker__label {
  display: block;
}

.checker__control[type="checkbox"]:enabled + .checker__label {
  cursor: pointer;
}

.checker__control[type="radio"]:enabled:not(:checked) + .checker__label {
  cursor: pointer;
}

.checker__control:focus-visible + .checker__label {
  outline: 1px solid var(--text-primary-color);
  outline-offset: 2px;
}

/* simple */

.checker--simple .checker__label {
  position: relative;
  transition: color 200ms linear;
}

.checker--simple .checker__counter {
  vertical-align: baseline;
  display: inline-block;
  padding: 4px 10px 3px;
  line-height: 1;
  font-weight: 500;
  border-radius: 18px;
  color: var(--text-primary-color);
  background: var(--background-special-color-1);
}

.checker--simple .checker__label::before {
  content: "";
  position: absolute;
  inset: -8px;
}

.checker--simple:hover .checker__control:enabled:not(:checked) + .checker__label {
  color: var(--text-primary-color-70);
}

.checker--simple .checker__control:checked + .checker__label {
  color: var(--accent-color);
}

.checker--simple.checker--size_m {
  font-size: 16px;
  line-height: 24px;
}

.checker--simple.checker--size_l {
  font-size: 20px;
  line-height: 28px;
  font-weight: 800;
}

/* icon */

.checker--icon .checker__label {
  width: 30px;
  height: 30px;
  min-width: 100%;
  max-width: 100%;
  min-height: 100%;
  max-height: 100%;
  opacity: 0.5;
  transition: opacity 150ms linear;
}

.checker--icon:hover .checker__control:enabled:not(:checked) + .checker__label {
  opacity: 0.8;
}

.checker--icon .checker__control:checked + .checker__label {
  opacity: 1;
}
/* ... */

